# akochan

./: .gitignore  CMakeLists.txt
ai_src/: CMakelists.txt
cmake/: FetchBoost.cmake  FetchOpenMP.cmake
